[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/components/CardBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/menu/EditCard.gd" type="Script" id=2]

[node name="EditCard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.5874
margin_right = 1.5874
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardBase" parent="." instance=ExtResource( 1 )]
margin_left = 40.0
margin_top = 40.0
margin_right = 235.0
margin_bottom = 260.0

[node name="bt_voltar" type="Button" parent="."]
margin_left = 30.0
margin_top = 530.0
margin_right = 198.0
margin_bottom = 572.0
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bt_save" type="Button" parent="."]
margin_left = 220.0
margin_top = 530.0
margin_right = 388.0
margin_bottom = 572.0
text = "Salvar"

[node name="properties_camps" type="Node" parent="."]

[node name="name_camp" type="Control" parent="properties_camps"]
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="properties_camps/name_camp"]
margin_left = 266.804
margin_top = 44.9492
margin_right = 309.804
margin_bottom = 58.9492
rect_scale = Vector2( 2, 2 )
text = "Nome:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edit_name" type="TextEdit" parent="properties_camps/name_camp"]
margin_left = 361.502
margin_top = 40.3307
margin_right = 631.502
margin_bottom = 74.3307
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hair_camp" type="Control" parent="properties_camps"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hair" type="Label" parent="properties_camps/hair_camp"]
margin_left = 265.544
margin_top = 91.5663
margin_right = 312.544
margin_bottom = 105.566
rect_scale = Vector2( 2, 2 )
text = "Cabelo:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edit_hair" type="OptionButton" parent="properties_camps/hair_camp"]
margin_left = 367.0
margin_top = 87.0
margin_right = 632.0
margin_bottom = 121.0
text = "Selecione um cabelo"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="bt_voltar" to="." method="_on_bt_voltar_button_down"]
[connection signal="button_down" from="bt_save" to="." method="_on_bt_save_button_down"]
